--- a/views/regist/register.ejs
+++ b/views/regist/register.ejs
@@ -103,14 +103,14 @@
                 <label for="email">Email:</label>
                 <input type="email" class="form-control" name="email" id="email">
             </div>
-            <div class="form-group">
+            <!--<div class="form-group">
                 <div>
                   Foto: 
                   <input type="file" id="file" name="sampleFile">
-                  <p id="imageAlert"></p>
+                  <p id="imageAlert"></p>-->
                   <!--<div id="fileDisplayArea" style="margin-top:2em; width:100%; overflow-x:auto"></div>-->
-                </div>
-            </div>
+                <!--</div>
+            </div>-->
 
             <div class="form-group">
                 <label for="linkedin">Linkedin:</label>
@@ -160,14 +160,14 @@
                 <input type="email" class="form-control" name="email" id="email">
             </div>
 
-            <div class="form-group">
+            <!--<div class="form-group">
                 <div>
                   Foto(formato jpeg ou png): 
                   <input type="file" id="file" name="sampleFile">
-                  <p id="imageAlert"></p>
+                  <p id="imageAlert"></p>-->
                   <!--<div id="fileDisplayArea" style="margin-top:2em; width:100%; overflow-x:auto"></div>-->
-                </div>
-            </div>
+                <!--</div>
+            </div>-->
 
             <div class="form-group">
                 <label for="linkedin">Linkedin:</label>
